fix scroll overflow issue on mobile safari

--- a/src/components/QuizUI/index.css
+++ b/src/components/QuizUI/index.css
@@ -60,7 +60,7 @@ Overriding the style when generating screenshots
   .card {
     background-color: var(--quiz-bg);
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     transition: transform 0.39s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
@@ -68,10 +68,11 @@ Overriding the style when generating screenshots
   /* Toggle flip effect */
   .card-container:not(.card-flip) {
     .card-front {
-      transform: rotateY(0deg);
+      /* transform: rotateY(0deg); */
     }
     .card-back {
       transform: rotateY(180deg);
+      height: 0;
     }
   }
 
@@ -89,12 +90,12 @@ Overriding the style when generating screenshots
   /* Front and back faces of the card */
   .card-front,
   .card-back {
-    overflow-y: auto;
+    /* overflow-y: auto; */
 
     background-color: var(--quiz-bg);
     position: absolute;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     backface-visibility: hidden; /* Hides the back when not visible */
   }
   /* .correct .card-front,
